# DataStructures

./: CMakeLists.txt  README.md  Stack.h  TemplateDoublyLinkedList.h  TemplateLinkedList.h  TemplateQueue.h  TemplateStack.h  Tries.cpp  Tries.h
Tries/: CMakeLists.txt  Tries.cpp  Tries.h  main.cpp
